Update translation - 105407515 (#3964) 9fc0f5463022a81c762b9a496ce878f6296db9af

--- a/tl/hotel-rooms-for-california-healthcare-workers/index.html
+++ b/tl/hotel-rooms-for-california-healthcare-workers/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Mga kuwarto sa hotel para sa mga manggagawa sa pangangalagang pangkalusugan ng California</h1>
           
-            <p class="small-text">Huling na-update&nbsp;Marso 25, 2021 sa 3:11 PM</p>
+            <p class="small-text">Huling na-update&nbsp;Abril 2, 2021 sa 3:45 PM</p>
           
         </div>
       </div>
@@ -169,15 +169,15 @@
 
 
 
-<h2 class="js-qa-exclude" id="program-eligibility">Pagiging kwalipikado sa programa</h2>
+<h2 id="program-eligibility">Pagiging kwalipikado sa programa</h2>
 
 
 
-<p class="js-qa-exclude">Para maging kwalipikado sa isang bayad na kuwarto sa pamamagitan ng programang ito, dapat ay:</p>
+<p>Para maging kwalipikado sa isang bayad na kuwarto sa pamamagitan ng programang ito, dapat ay:</p>
 
 
 
-<ul class="js-qa-exclude"><li>Nagtatrabaho ka sa isang pasilidad ng pangangalagang pangkalusugan sa California bilang manggagawa sa pangangalagang pangkalusugan, o nakikipagtulungan ka sa isang pasilidad ng pangangalagang pangkalusugan sa California bilang isa sa mga sumusunod: <ul><li>Provider ng medikal na transportasyon</li><li>Unang tagaresponde (bumbero, pulis, opisyal sa koreksyonal, pang-emergency na medikal na technician (emergency medical technician, EMT), o paramedic</li><li>Hindi medikal na tauhan sa isang pasilidad ng pangangalagang pangkalusugan</li><li>Tauhan ng koreksyonal na pasilidad</li><li>Nagtatrabaho sa Health Corps ng California o sa Medikal na Team para sa Tulong ng California (California Medical Assistance Team, CAL MAT), gaya ng itinalaga ng Estado</li></ul></li><li>Nagpositibo sa pagsusuri para sa COVID-19 bilang resulta ng pagkakalantad habang ikaw ay nagtatrabaho sa isang pasilidad (at hindi mo kailangang magpaospital), o nalantad sa COVID-19 sa pamamagitan ng close contact sa mga kliyente, pasyente, residente, o coworker na may:<ul><li>Mga sintomas ng COVID-19 (hinihinalang nalantad)</li><li>Nagpositibo sa pagsusuri para sa COVID-19 (nakumpirmang nalantad) at puwedeng mayroon o walang sintomas</li></ul></li></ul>
+<ul><li>Nagtatrabaho ka sa isang pasilidad ng pangangalagang pangkalusugan sa California bilang manggagawa sa pangangalagang pangkalusugan, o nakikipagtulungan ka sa isang pasilidad ng pangangalagang pangkalusugan sa California bilang isa sa mga sumusunod: <ul><li>Provider ng medikal na transportasyon</li><li>Unang tagaresponde (bumbero, pulis, opisyal sa koreksyonal, pang-emergency na medikal na technician (emergency medical technician, EMT), o paramedic</li><li>Hindi medikal na tauhan sa isang pasilidad ng pangangalagang pangkalusugan</li><li>Tauhan ng koreksyonal na pasilidad</li><li>Nagtatrabaho sa Health Corps ng California o sa Medikal na Team para sa Tulong ng California (California Medical Assistance Team, CAL MAT), gaya ng itinalaga ng Estado</li></ul></li><li>Nagpositibo sa pagsusuri para sa COVID-19 bilang resulta ng pagkakalantad habang ikaw ay nagtatrabaho sa isang pasilidad (at hindi mo kailangang magpaospital), o nalantad sa COVID-19 sa pamamagitan ng close contact sa mga kliyente, pasyente, residente, o coworker na may:<ul><li>Mga sintomas ng COVID-19 (hinihinalang nalantad)</li><li>Nagpositibo sa pagsusuri para sa COVID-19 (nakumpirmang nalantad) at puwedeng mayroon o walang sintomas</li></ul></li></ul>
 
 
 
@@ -213,7 +213,7 @@
 
 
 
-<h2 class="js-qa-exclude" id="reserve-room">Pagpapareserba ng kuwarto</h2>
+<h2 id="reserve-room">Pagpapareserba ng kuwarto</h2>
 
 
 
@@ -269,7 +269,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>Puwede bang saklawin ang routine na pagbiyahe ng mga tauhan sa pangangalagang pangkalusugan sa ilalim ng programang “Mga kuwarto sa hotel para sa mga manggagawa sa pangangalagang pangkalusugan”?</h4>
+            <h3>Puwede bang saklawin ang routine na pagbiyahe ng mga tauhan sa pangangalagang pangkalusugan sa ilalim ng programang “Mga kuwarto sa hotel para sa mga manggagawa sa pangangalagang pangkalusugan”?</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -297,7 +297,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>Paano kung tanggihan ng Makakaugnayan ng aking pasilidad ang aking kahilingan sa pagpapareserba?</h4>
+            <h3>Paano kung tanggihan ng Makakaugnayan ng aking pasilidad ang aking kahilingan sa pagpapareserba?</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -320,7 +320,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>Kung nagtatrabaho ako sa isang staffing agency o registry, sino ang aking magiging Makakaugnayan?</h4>
+            <h3>Kung nagtatrabaho ako sa isang staffing agency o registry, sino ang aking magiging Makakaugnayan?</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
