--- a/vi/hotel-rooms-for-california-healthcare-workers/index.html
+++ b/vi/hotel-rooms-for-california-healthcare-workers/index.html
@@ -150,7 +150,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Phòng khách sạn dành cho nhân viên chăm sóc sức khỏe California</h1>
           
-            <p class="small-text">Cập nhật mới nhất&nbsp;25 tháng 3, 2021 lúc 15:11</p>
+            <p class="small-text">Cập nhật mới nhất&nbsp;2 tháng 4, 2021 lúc 15:45</p>
           
         </div>
       </div>
@@ -171,15 +171,15 @@
 
 
 
-<h2 class="js-qa-exclude" id="program-eligibility">Điều kiện tham gia chương trình</h2>
+<h2 id="program-eligibility">Điều kiện tham gia chương trình</h2>
 
 
 
-<p class="js-qa-exclude">Để đủ điều kiện nhận một phòng đã trả phí thông qua chương trình này, quý vị phải:</p>
+<p>Để đủ điều kiện nhận một phòng đã trả phí thông qua chương trình này, quý vị phải:</p>
 
 
 
-<ul class="js-qa-exclude"><li>Làm việc tại một cơ sở chăm sóc sức khỏe của California với tư cách là nhân viên chăm sóc sức khỏe hoặc phối hợp làm việc với một cơ sở chăm sóc sức khỏe của California với tư cách là một trong những đối tượng sau: <ul><li>Nhà cung cấp dịch vụ đưa đón y tế</li><li>Phản ứng viên (cứu hỏa, cảnh sát, cải huấn, kỹ thuật viên y tế khẩn cấp (Emergency Medical Technician, EMT) hoặc nhân viên cấp cứu)</li><li>Nhân viên không phụ trách y tế trong cơ sở chăm sóc sức khỏe</li><li>Nhân viên cơ sở cải huấn</li><li>Làm việc tại California’s Health Corps hoặc Nhóm Hỗ Trợ Y Tế California (California Medical Assistance Team, CAL MAT), do Tiểu Bang chỉ định</li></ul></li><li>Đã có kết quả xét nghiệm dương tính với COVID-19 do bị phơi nhiễm trong quá trình quý vị làm việc tại cơ sở (và không cần phải nhập viện) hoặc bị phơi nhiễm với COVID-19 khi tiếp xúc gần với khách hàng, bệnh nhân, người dân hoặc đồng nghiệp có:<ul><li>Các triệu chứng của COVID-19 (phơi nhiễm giả định)</li><li>Đã có kết quả xét nghiệm dương tính với COVID-19 (đã xác nhận phơi nhiễm) và có thể có hoặc không có triệu chứng</li></ul></li></ul>
+<ul><li>Làm việc tại một cơ sở chăm sóc sức khỏe của California với tư cách là nhân viên chăm sóc sức khỏe hoặc phối hợp làm việc với một cơ sở chăm sóc sức khỏe của California với tư cách là một trong những đối tượng sau: <ul><li>Nhà cung cấp dịch vụ đưa đón y tế</li><li>Phản ứng viên (cứu hỏa, cảnh sát, cải huấn, kỹ thuật viên y tế khẩn cấp (Emergency Medical Technician, EMT) hoặc nhân viên cấp cứu)</li><li>Nhân viên không phụ trách y tế trong cơ sở chăm sóc sức khỏe</li><li>Nhân viên cơ sở cải huấn</li><li>Làm việc tại California’s Health Corps hoặc Nhóm Hỗ Trợ Y Tế California (California Medical Assistance Team, CAL MAT), do Tiểu Bang chỉ định</li></ul></li><li>Đã có kết quả xét nghiệm dương tính với COVID-19 do bị phơi nhiễm trong quá trình quý vị làm việc tại cơ sở (và không cần phải nhập viện) hoặc bị phơi nhiễm với COVID-19 khi tiếp xúc gần với khách hàng, bệnh nhân, người dân hoặc đồng nghiệp có:<ul><li>Các triệu chứng của COVID-19 (phơi nhiễm giả định)</li><li>Đã có kết quả xét nghiệm dương tính với COVID-19 (đã xác nhận phơi nhiễm) và có thể có hoặc không có triệu chứng</li></ul></li></ul>
 
 
 
@@ -215,7 +215,7 @@
 
 
 
-<h2 class="js-qa-exclude" id="reserve-room">Đặt phòng</h2>
+<h2 id="reserve-room">Đặt phòng</h2>
 
 
 
@@ -271,7 +271,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>Phí công tác hàng ngày cho nhân viên chăm sóc sức khỏe có thể được bao trả theo chương trình "Phòng khách sạn cho nhân viên chăm sóc sức khỏe" không?</h4>
+            <h3>Phí công tác hàng ngày cho nhân viên chăm sóc sức khỏe có thể được bao trả theo chương trình "Phòng khách sạn cho nhân viên chăm sóc sức khỏe" không?</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -299,7 +299,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>Nếu Đầu Mối Liên Lạc tại cơ sở của tôi từ chối yêu cầu đặt phòng của tôi thì sao?</h4>
+            <h3>Nếu Đầu Mối Liên Lạc tại cơ sở của tôi từ chối yêu cầu đặt phòng của tôi thì sao?</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -322,7 +322,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>Nếu tôi làm việc cho một đại lý nhân sự hoặc cơ quan đăng ký nhân sự thì Đầu Mối Liên Lạc của tôi là ai?</h4>
+            <h3>Nếu tôi làm việc cho một đại lý nhân sự hoặc cơ quan đăng ký nhân sự thì Đầu Mối Liên Lạc của tôi là ai?</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
