--- a/zh-hans/hotel-rooms-for-california-healthcare-workers/index.html
+++ b/zh-hans/hotel-rooms-for-california-healthcare-workers/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>为加州医务人员提供的酒店客房</h1>
           
-            <p class="small-text">最后更新时间&nbsp;2021年3月25日, 下午3:11</p>
+            <p class="small-text">最后更新时间&nbsp;2021年4月2日, 下午3:45</p>
           
         </div>
       </div>
@@ -169,15 +169,15 @@
 
 
 
-<h2 class="js-qa-exclude" id="program-eligibility">计划参与资格</h2>
+<h2 id="program-eligibility">计划参与资格</h2>
 
 
 
-<p class="js-qa-exclude">要想通过此计划获得入住免费客房的资格，您必须：</p>
+<p>要想通过此计划获得入住免费客房的资格，您必须：</p>
 
 
 
-<ul class="js-qa-exclude"><li>在加州医疗保健机构担任医务人员，或是与加州医疗保健机构合作的以下任一种人员： <ul><li>医疗运输服务提供者</li><li>现场应急人员（消防人员、治安人员、惩教人员、急救医务人员 [Emergency Medical Technician, EMT] 或护理人员）</li><li>医疗保健机构内的非医务人员</li><li>惩教所工作人员</li><li>州府指定的加州医疗队或加州医疗救助队 (California Medical Assistance Team, CAL MAT) 工作人员</li></ul></li><li>在机构工作期间接触COVID-19后，检测结果呈阳性（无需住院治疗）, 或通过与有以下任一情况的顾客、患者、住院医生或同事进行密切接触，而接触到COVID-19：<ul><li>出现COVID-19症状（假定接触过病毒）</li><li>COVID-19检测呈阳性（确定接触过病毒），无论是否出现症状</li></ul></li></ul>
+<ul><li>在加州医疗保健机构担任医务人员，或是与加州医疗保健机构合作的以下任一种人员： <ul><li>医疗运输服务提供者</li><li>现场应急人员（消防人员、治安人员、惩教人员、急救医务人员 [Emergency Medical Technician, EMT] 或护理人员）</li><li>医疗保健机构内的非医务人员</li><li>惩教所工作人员</li><li>州府指定的加州医疗队或加州医疗救助队 (California Medical Assistance Team, CAL MAT) 工作人员</li></ul></li><li>在机构工作期间接触COVID-19后，检测结果呈阳性（无需住院治疗）, 或通过与有以下任一情况的顾客、患者、住院医生或同事进行密切接触，而接触到COVID-19：<ul><li>出现COVID-19症状（假定接触过病毒）</li><li>COVID-19检测呈阳性（确定接触过病毒），无论是否出现症状</li></ul></li></ul>
 
 
 
@@ -213,7 +213,7 @@
 
 
 
-<h2 class="js-qa-exclude" id="reserve-room">预订客房</h2>
+<h2 id="reserve-room">预订客房</h2>
 
 
 
@@ -269,7 +269,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>“为医务人员提供酒店客房”计划能否承保医务人员的常规旅行费用？</h4>
+            <h3>“为医务人员提供酒店客房”计划能否承保医务人员的常规旅行费用？</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -297,7 +297,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>如果我所在机构的联络人驳回我的预订申请，该怎么办？</h4>
+            <h3>如果我所在机构的联络人驳回我的预订申请，该怎么办？</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -320,7 +320,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>如果我任职于人才中介机构或人力登记处，则我的联络人是谁？</h4>
+            <h3>如果我任职于人才中介机构或人力登记处，则我的联络人是谁？</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
