--- a/ar/hotel-rooms-for-california-healthcare-workers/index.html
+++ b/ar/hotel-rooms-for-california-healthcare-workers/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>غرف فندقية لموظفي الرعاية الصحية في كاليفورنيا</h1>
           
-            <p class="small-text">آخر التحديثات&nbsp;3:11 م الساعة 25 مارس 2021</p>
+            <p class="small-text">آخر التحديثات&nbsp;3:45 م الساعة 2 أبريل 2021</p>
           
         </div>
       </div>
@@ -169,15 +169,15 @@
 
 
 
-<h2 class="js-qa-exclude" id="program-eligibility">التأهل للبرنامج</h2>
+<h2 id="program-eligibility">التأهل للبرنامج</h2>
 
 
 
-<p class="js-qa-exclude">لكي تكون مؤهلاً للحصول على غرفة مدفوعة الأجر من خلال هذا البرنامج، يجب أن تكون:</p>
+<p>لكي تكون مؤهلاً للحصول على غرفة مدفوعة الأجر من خلال هذا البرنامج، يجب أن تكون:</p>
 
 
 
-<ul class="js-qa-exclude"><li>العمل في منشأة للرعاية الصحية بولاية كاليفورنيا كأحد عمال الرعاية الصحية أو العمل بالاشتراك مع إحدى منشآت الرعاية الصحية في كاليفورنيا كواحد مما يلي: <ul><li>موفري خدمات النقل الطبي</li><li>المستجيبين الأوائل (أفراد إطفاء الحرائق أو الشرطة أو الإصلاحيات أو تِقْنِيُّ طِبِّ الطَّوَارِئ (EMT) أو خدمات الإسعاف)</li><li>الطواقم غير الطبية في إحدى منشآت الرعاية الصحية</li><li>موظفي المرافق الإصلاحية</li><li>تعمل في الطواقم الصحية في كاليفورنيا أو فرق المساعدات الطبية بكاليفورنيا (CAL MAT) كما هو محدد من قبل الولاية</li></ul></li><li>ثبتت إصابتك بفيروس كوفيد-19 نتيجة تعرضك لأحد المصابين أثناء عملك في إحدى المنشآت (ولا تحتاج إلى دخول المستشفى)، أو تعرضت للإصابة بكوفيد-19 من خلال المخالطة اللصيقة للعملاء أو المرضى أو النزلاء أو زملاء العمل الذين:<ul><li>ظهرت عليهم أعراض كوفيد-19 (التعرض المفترض)</li><li>ثبتت إصابتهم بكوفيد-19 (تعرض مؤكد) وقد تظهر أو لا تظهر عليهم الأعراض</li></ul></li></ul>
+<ul><li>العمل في منشأة للرعاية الصحية بولاية كاليفورنيا كأحد عمال الرعاية الصحية أو العمل بالاشتراك مع إحدى منشآت الرعاية الصحية في كاليفورنيا كواحد مما يلي: <ul><li>موفري خدمات النقل الطبي</li><li>المستجيبين الأوائل (أفراد إطفاء الحرائق أو الشرطة أو الإصلاحيات أو تِقْنِيُّ طِبِّ الطَّوَارِئ (EMT) أو خدمات الإسعاف)</li><li>الطواقم غير الطبية في إحدى منشآت الرعاية الصحية</li><li>موظفي المرافق الإصلاحية</li><li>تعمل في الطواقم الصحية في كاليفورنيا أو فرق المساعدات الطبية بكاليفورنيا (CAL MAT) كما هو محدد من قبل الولاية</li></ul></li><li>ثبتت إصابتك بفيروس كوفيد-19 نتيجة تعرضك لأحد المصابين أثناء عملك في إحدى المنشآت (ولا تحتاج إلى دخول المستشفى)، أو تعرضت للإصابة بكوفيد-19 من خلال المخالطة اللصيقة للعملاء أو المرضى أو النزلاء أو زملاء العمل الذين:<ul><li>ظهرت عليهم أعراض كوفيد-19 (التعرض المفترض)</li><li>ثبتت إصابتهم بكوفيد-19 (تعرض مؤكد) وقد تظهر أو لا تظهر عليهم الأعراض</li></ul></li></ul>
 
 
 
@@ -213,7 +213,7 @@
 
 
 
-<h2 class="js-qa-exclude" id="reserve-room">حجز غرفة</h2>
+<h2 id="reserve-room">حجز غرفة</h2>
 
 
 
@@ -269,7 +269,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>هل يمكن لبرنامج "غرف فندقية للعاملين في مجال الرعاية الصحية" تغطية السفر والتنقلات الروتينية لموظفي الرعاية الصحية؟</h4>
+            <h3>هل يمكن لبرنامج "غرف فندقية للعاملين في مجال الرعاية الصحية" تغطية السفر والتنقلات الروتينية لموظفي الرعاية الصحية؟</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -297,7 +297,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>ماذا لو رفضت نقطة الاتصال في المنشأة التي أعمل بها طلب الحجز الخاص بي؟</h4>
+            <h3>ماذا لو رفضت نقطة الاتصال في المنشأة التي أعمل بها طلب الحجز الخاص بي؟</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -320,7 +320,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>إذا كنت أعمل في وكالة توظيف أو أحد مكاتب السجلات، فمن ستكون نقطة الاتصال الخاصة بي؟</h4>
+            <h3>إذا كنت أعمل في وكالة توظيف أو أحد مكاتب السجلات، فمن ستكون نقطة الاتصال الخاصة بي؟</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
