--- a/es/hotel-rooms-for-california-healthcare-workers/index.html
+++ b/es/hotel-rooms-for-california-healthcare-workers/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Habitaciones de hotel para los trabajadores sanitarios de California</h1>
           
-            <p class="small-text">Última actualización&nbsp;25 de marzo de 2021 a las 3:11 p. m.</p>
+            <p class="small-text">Última actualización&nbsp;2 de abril de 2021 a las 3:45 p. m.</p>
           
         </div>
       </div>
@@ -169,15 +169,15 @@
 
 
 
-<h2 class="js-qa-exclude" id="program-eligibility">Elegibilidad para el programa</h2>
+<h2 id="program-eligibility">Elegibilidad para el programa</h2>
 
 
 
-<p class="js-qa-exclude">A fin de ser elegible para una habitación pagada a través de este programa, usted debe cumplir lo siguiente:</p>
+<p>A fin de ser elegible para una habitación pagada a través de este programa, usted debe cumplir lo siguiente:</p>
 
 
 
-<ul class="js-qa-exclude"><li>Trabajar en un centro de atención médica de California como trabajador sanitario o trabajar conjuntamente con un centro de atención médica de California como uno de los siguientes: <ul><li>proveedor de transporte médico</li><li>socorrista (bomberos, policías, trabajadores de correccionales, técnicos de emergencias médicas [Emergency Medical Technician, EMT] o paramédicos)</li><li>personal no médico en un centro de atención médica</li><li>personal de correccionales</li><li>trabajar en el programa California’s Health Corps (Cuerpo de Salud de California) o de los Equipos de Asistencia Médica de California (California Medical Assistance Team, CAL MAT), designados por el estado</li></ul></li><li>Haber dado positivo por COVID-19 como resultado de la exposición durante su trabajo en una instalación (y no necesitar ser hospitalizado) o haber estado expuesto a la COVID-19 mediante contacto estrecho con clientes, pacientes, residentes o compañeros de trabajo que cumplan alguna de las siguientes:<ul><li>tener síntomas de COVID-19 (presunta exposición)</li><li>haber dado positivo por COVID-19 (exposición confirmada), y tener o no síntomas</li></ul></li></ul>
+<ul><li>Trabajar en un centro de atención médica de California como trabajador sanitario o trabajar conjuntamente con un centro de atención médica de California como uno de los siguientes: <ul><li>proveedor de transporte médico</li><li>socorrista (bomberos, policías, trabajadores de correccionales, técnicos de emergencias médicas [Emergency Medical Technician, EMT] o paramédicos)</li><li>personal no médico en un centro de atención médica</li><li>personal de correccionales</li><li>trabajar en el programa California’s Health Corps (Cuerpo de Salud de California) o de los Equipos de Asistencia Médica de California (California Medical Assistance Team, CAL MAT), designados por el estado</li></ul></li><li>Haber dado positivo por COVID-19 como resultado de la exposición durante su trabajo en una instalación (y no necesitar ser hospitalizado) o haber estado expuesto a la COVID-19 mediante contacto estrecho con clientes, pacientes, residentes o compañeros de trabajo que cumplan alguna de las siguientes:<ul><li>tener síntomas de COVID-19 (presunta exposición)</li><li>haber dado positivo por COVID-19 (exposición confirmada), y tener o no síntomas</li></ul></li></ul>
 
 
 
@@ -213,7 +213,7 @@
 
 
 
-<h2 class="js-qa-exclude" id="reserve-room">Reservación de una habitación</h2>
+<h2 id="reserve-room">Reservación de una habitación</h2>
 
 
 
@@ -269,7 +269,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>¿Pueden los viajes de rutina del personal sanitario estar cubiertos por el programa “Habitaciones de hotel para trabajadores sanitarios”?</h4>
+            <h3>¿Pueden los viajes de rutina del personal sanitario estar cubiertos por el programa “Habitaciones de hotel para trabajadores sanitarios”?</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -297,7 +297,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>¿Qué sucede si el punto de contacto de mi instalación rechaza mi solicitud de reservación?</h4>
+            <h3>¿Qué sucede si el punto de contacto de mi instalación rechaza mi solicitud de reservación?</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -320,7 +320,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>Si trabajo para una agencia o registro de contratación, ¿quién será mi punto de contacto?</h4>
+            <h3>Si trabajo para una agencia o registro de contratación, ¿quién será mi punto de contacto?</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
