--- a/ko/hotel-rooms-for-california-healthcare-workers/index.html
+++ b/ko/hotel-rooms-for-california-healthcare-workers/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>캘리포니아 의료 종사자를 위한 호텔 객실</h1>
           
-            <p class="small-text">최종 갱신 일자&nbsp;2021년 3월 25일 오후 3:11</p>
+            <p class="small-text">최종 갱신 일자&nbsp;2021년 4월 2일 오후 3:45</p>
           
         </div>
       </div>
@@ -169,15 +169,15 @@
 
 
 
-<h2 class="js-qa-exclude" id="program-eligibility">프로그램 해당 자격</h2>
+<h2 id="program-eligibility">프로그램 해당 자격</h2>
 
 
 
-<p class="js-qa-exclude">본 프로그램을 통한 객실 비용 지불에 대해 해당 자격을 갖추려면 다음 조건을 충족해야 합니다:</p>
+<p>본 프로그램을 통한 객실 비용 지불에 대해 해당 자격을 갖추려면 다음 조건을 충족해야 합니다:</p>
 
 
 
-<ul class="js-qa-exclude"><li>캘리포니아 의료 시설에서 의료 종사자로 근무하거나, 다음 중 하나에 해당하며 캘리포니아 의료 시설과 연결하여 근무: <ul><li>의료 수송 제공자</li><li>응급 구조 대원(소방관, 경찰, 교정관, 전문응급구조사[Emergency Medical Technician, EMT] 또는 긴급 의료원)</li><li>의료 시설 내 비진료부서 직원</li><li>교정 시설 직원</li><li>주 정부가 지정한 캘리포니아 보건 봉사단(Health Corps) 또는 캘리포니아 의료 지원팀(California Medical Assistance Teams, CAL MAT)에서 근무</li></ul></li><li>시설에서 근무 중 노출된 결과로 COVID-19 양성 반응을 나타냈거나 (입원이 필요하지는 않음) 다음 중 하나에 해당하는 환자, 시설 내 거주자 또는 동료와의 밀접 접촉으로 COVID-19에 노출된 경우:<ul><li>COVID-19 증상 (노출된 것으로 추정)</li><li>증상 유무에 관계없이 COVID-19 양성 반응(노출된 것으로 확진)</li></ul></li></ul>
+<ul><li>캘리포니아 의료 시설에서 의료 종사자로 근무하거나, 다음 중 하나에 해당하며 캘리포니아 의료 시설과 연결하여 근무: <ul><li>의료 수송 제공자</li><li>응급 구조 대원(소방관, 경찰, 교정관, 전문응급구조사[Emergency Medical Technician, EMT] 또는 긴급 의료원)</li><li>의료 시설 내 비진료부서 직원</li><li>교정 시설 직원</li><li>주 정부가 지정한 캘리포니아 보건 봉사단(Health Corps) 또는 캘리포니아 의료 지원팀(California Medical Assistance Teams, CAL MAT)에서 근무</li></ul></li><li>시설에서 근무 중 노출된 결과로 COVID-19 양성 반응을 나타냈거나 (입원이 필요하지는 않음) 다음 중 하나에 해당하는 환자, 시설 내 거주자 또는 동료와의 밀접 접촉으로 COVID-19에 노출된 경우:<ul><li>COVID-19 증상 (노출된 것으로 추정)</li><li>증상 유무에 관계없이 COVID-19 양성 반응(노출된 것으로 확진)</li></ul></li></ul>
 
 
 
@@ -213,7 +213,7 @@
 
 
 
-<h2 class="js-qa-exclude" id="reserve-room">객실 예약하기</h2>
+<h2 id="reserve-room">객실 예약하기</h2>
 
 
 
@@ -269,7 +269,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>의료 관련 직원의 통상적인 출장에 "의료 종사자를 위한 호텔 객실" 프로그램을 적용할 수 있습니까?</h4>
+            <h3>의료 관련 직원의 통상적인 출장에 "의료 종사자를 위한 호텔 객실" 프로그램을 적용할 수 있습니까?</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -297,7 +297,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>본인 시설의 연락 담당자가 본인의 예약 요청을 거부하면 어떻게 됩니까?</h4>
+            <h3>본인 시설의 연락 담당자가 본인의 예약 요청을 거부하면 어떻게 됩니까?</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -320,7 +320,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>충원 기관이나 등록부에서 근무하는 경우 본인의 연락 담당자는 누가 됩니까?</h4>
+            <h3>충원 기관이나 등록부에서 근무하는 경우 본인의 연락 담당자는 누가 됩니까?</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
