--- a/zh-hant/hotel-rooms-for-california-healthcare-workers/index.html
+++ b/zh-hant/hotel-rooms-for-california-healthcare-workers/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>為加州醫務人員提供的酒店客房</h1>
           
-            <p class="small-text">最近更新&nbsp;2021年3月25日, 下午3:11</p>
+            <p class="small-text">最近更新&nbsp;2021年4月2日, 下午3:45</p>
           
         </div>
       </div>
@@ -169,15 +169,15 @@
 
 
 
-<h2 class="js-qa-exclude" id="program-eligibility">計劃參與資格</h2>
+<h2 id="program-eligibility">計劃參與資格</h2>
 
 
 
-<p class="js-qa-exclude">要想透過此計劃獲得入住免費客房的資格，您必須：</p>
+<p>要想透過此計劃獲得入住免費客房的資格，您必須：</p>
 
 
 
-<ul class="js-qa-exclude"><li>在加州醫療保健機構擔任醫務人員，或是與加州醫療保健機構合作的以下任一種人員： <ul><li>醫療運輸服務提供者</li><li>現場應急人員（消防人員、治安人員、懲教人員、急救醫務人員 [Emergency Medical Technician, EMT] 或護理人員）</li><li>醫療保健機構內的非醫務人員</li><li>懲教所工作人員</li><li>州府指定的加州醫療隊或加州醫療救助隊 (California Medical Assistance Team, CAL MAT) 工作人員</li></ul></li><li>在機構工作期間接觸COVID-19後，檢測結果呈陽性（無需住院治療）, 或透過與有以下任一情況的顧客、患者、住院醫生或同事進行密切接觸，而接觸到COVID-19：<ul><li>有COVID-19症狀（假定接觸過病毒）</li><li>COVID-19檢測呈陽性（確定接觸過病毒），無論是否出現症狀</li></ul></li></ul>
+<ul><li>在加州醫療保健機構擔任醫務人員，或是與加州醫療保健機構合作的以下任一種人員： <ul><li>醫療運輸服務提供者</li><li>現場應急人員（消防人員、治安人員、懲教人員、急救醫務人員 [Emergency Medical Technician, EMT] 或護理人員）</li><li>醫療保健機構內的非醫務人員</li><li>懲教所工作人員</li><li>州府指定的加州醫療隊或加州醫療救助隊 (California Medical Assistance Team, CAL MAT) 工作人員</li></ul></li><li>在機構工作期間接觸COVID-19後，檢測結果呈陽性（無需住院治療）, 或透過與有以下任一情況的顧客、患者、住院醫生或同事進行密切接觸，而接觸到COVID-19：<ul><li>有COVID-19症狀（假定接觸過病毒）</li><li>COVID-19檢測呈陽性（確定接觸過病毒），無論是否出現症狀</li></ul></li></ul>
 
 
 
@@ -213,7 +213,7 @@
 
 
 
-<h2 class="js-qa-exclude" id="reserve-room">預訂客房</h2>
+<h2 id="reserve-room">預訂客房</h2>
 
 
 
@@ -269,7 +269,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>醫務人員的常規旅行是否能納入「供醫務人員使用的酒店客房」計劃的承保範圍？</h4>
+            <h3>醫務人員的常規旅行是否能納入「供醫務人員使用的酒店客房」計劃的承保範圍？</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -297,7 +297,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>如果我所在機構的聯絡人駁回我的預訂申請，該怎麼辦？</h4>
+            <h3>如果我所在機構的聯絡人駁回我的預訂申請，該怎麼辦？</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -320,7 +320,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>如果我任職於人才中介機構或人力登記處，則聯絡人是誰？</h4>
+            <h3>如果我任職於人才中介機構或人力登記處，則聯絡人是誰？</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
