--- a/ar/latest-news/index.html
+++ b/ar/latest-news/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>آخر الأخبار عن COVID-19</h1>
           
-            <p class="small-text">آخر التحديثات&nbsp;6:10 م الساعة 5 أبريل 2021</p>
+            <p class="small-text">آخر التحديثات&nbsp;6:07 ص الساعة 6 أبريل 2021</p>
           
         </div>
       </div>
