Update translation - 105417247 (#3977) 6faf7c00a5cbbbfb50edb35fd1af1a48b68b7948

--- a/ar/symptoms-and-risks/index.html
+++ b/ar/symptoms-and-risks/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>الأعراض والمخاطر</h1>
           
-            <p class="small-text">آخر التحديثات&nbsp;3:19 م الساعة 1 أبريل 2021</p>
+            <p class="small-text">آخر التحديثات&nbsp;7:55 م الساعة 2 أبريل 2021</p>
           
         </div>
       </div>
@@ -555,7 +555,7 @@
 <ul><li>كنت موجودًا على بعد 6 أقدام من شخص مصاب بمرض كوفيد-19 لمدة 15 دقيقة أو أكثرعلى مدار 24 ساعة</li><li>كنت قد قدمت الرعاية المنزلية لشخص مصاب بمرض كوفيد-19</li><li>كنت قد اتصلت اتصالاً جسديًا مباشرًا مع الشخص (مثل العناق أو التقبيل)</li><li>قد تشاركت أواني الأكل أو الشرب</li><li>لقد عطسوا أو سعلوا أو أصابك رذاذ تنفسهم بطريقة ما</li></ul>
 <p>لست مضطرًا إلى الإقامة بالحجر الصحي، حتى بعد المخالطة اللصيقة، إذا:</p>
 <ul><li>لقد تعافيت من كوفيد-19 خلال الأشهر الثلاثة الماضية ولم تظهر عليك أعراض جديدة.</li><li>تم <a href="/ar/vaccines/#Quarantine-if-you%E2%80%99re-vaccinated">تطعيمك بالكامل</a> ضد كوفيد-19 ولم تظهر عليك أي أعراض.</li></ul>
-<p>وعليكم أن تتجنبوا السفر غير الأساسي على الصعيدين المحلي والدولي، حتى وإن تم تلقيحكم بالكامل. انظر <a href="/ar/travel/">صفحة السفر</a> للتعرف على متطلبات الحجر الصحي المتعلقة بالسفر.</p>
+<p>انظر <a href="/ar/travel/">صفحة السفر</a> للتعرف على متطلبات الحجر الصحي المتعلقة بالسفر.</p>
 
                   </div>
                 </div>
