--- a/tl/symptoms-and-risks/index.html
+++ b/tl/symptoms-and-risks/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Mga sintomas at panganib</h1>
           
-            <p class="small-text">Huling na-update&nbsp;Abril 1, 2021 sa 3:19 PM</p>
+            <p class="small-text">Huling na-update&nbsp;Abril 2, 2021 sa 7:55 PM</p>
           
         </div>
       </div>
@@ -555,7 +555,7 @@
 <ul><li>Nakaugnayan mo ang isang taong may COVID-19 nang may distansyang wala pang 6 na talampakan, sa loob ng 15 minuto o higit pa sa loob ng 24 na oras</li><li>Nagbigay ka ng pangangalaga sa tirahan ng isang taong may COVID-19</li><li>Nagkaroon ka ng direktang pisikal na contact sa indibidwal (niyakap o hinalikan mo siya)</li><li>Naghiraman kayo ng kubyertos</li><li>Nabahingan o naubuhan ka niya, o natalsikan ka ng mga droplet mula sa kanyang baga</li></ul>
 <p>Hindi mo kailangang mag-quarantine kahit nagkaroon ka ng close contact kung:</p>
 <ul><li>Gumaling ka na mula sa COVID-19 sa nakalipas na 3 buwan at wala kang bagong sintomas.</li><li><a href="/tl/vaccines/#Quarantine-if-you%E2%80%99re-vaccinated">Ganap ka nang nabakunahan</a> para sa COVID-19 at wala kang ipinapakitang sintomas.</li></ul>
-<p>Dapat mong iwasan ang mga hindi esensyal na domestiko at internasyonal na pagbiyahe, kahit kumpleto na ang iyong bakuna. Tingnan ang <a href="/tl/travel/">page na Pagbiyahe</a> para sa mga ipinag-aatas sa quarantine na nauugnay sa pagbiyahe.</p>
+<p>Tingnan ang <a href="/tl/travel/">page na Pagbiyahe</a> para sa mga ipinag-aatas sa quarantine na nauugnay sa pagbiyahe.</p>
 
                   </div>
                 </div>
