--- a/zh-hans/symptoms-and-risks/index.html
+++ b/zh-hans/symptoms-and-risks/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>症状及风险</h1>
           
-            <p class="small-text">最后更新时间&nbsp;2021年4月1日, 下午3:19</p>
+            <p class="small-text">最后更新时间&nbsp;2021年4月2日, 下午7:55</p>
           
         </div>
       </div>
@@ -555,7 +555,7 @@
 <ul><li>您与COVID-19感染者在6英尺距离内相处15分钟或超过24小时</li><li>您在家中为COVID-19患者提供照护</li><li>您与感染者有过直接身体接触（如拥抱或亲吻）</li><li>您与感染者共用饮食器具</li><li>感染者向您打喷嚏、咳嗽，或以某种方式使您接触呼吸道飞沫</li></ul>
 <p>如果符合以下情况，即使有过密切接触，也无需检疫隔离：</p>
 <ul><li>在过去3个月内，您的COVID-19病症已康复，并且未出现新症状。</li><li>您已<a href="/zh-hans/vaccines/#Quarantine-if-you%E2%80%99re-vaccinated">完全接种</a>COVID-19疫苗并且未出现症状。</li></ul>
-<p>即使您已完全接种疫苗，您也应该尽量避免非必要的国内和国际旅游。请参阅<a href="/zh-hans/travel/">旅游页面</a>，以了解有关旅游的检疫隔离规定。</p>
+<p>请参阅<a href="/zh-hans/travel/">出行页面</a>，以了解有关出行的检疫隔离规定。</p>
 
                   </div>
                 </div>
