--- a/zh-hant/symptoms-and-risks/index.html
+++ b/zh-hant/symptoms-and-risks/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>症狀及風險</h1>
           
-            <p class="small-text">最近更新&nbsp;2021年4月1日, 下午3:19</p>
+            <p class="small-text">最近更新&nbsp;2021年4月2日, 下午7:55</p>
           
         </div>
       </div>
@@ -555,7 +555,7 @@
 <ul><li>您與新型冠狀病毒感染者在6英尺距離內相處15分鐘或24小時以上</li><li>您在家中為新型冠狀病毒患者提供照護</li><li>您與感染者有過直接身體接觸（如擁抱或親吻）</li><li>您與感染者共用飲食器具</li><li>感染者向您打噴嚏、咳嗽，或以某種方式使您接觸呼吸道飛沫</li></ul>
 <p>如果符合以下情況，即使有過緊密接觸，亦無需檢疫隔離：</p>
 <ul><li>在過去3個月內，您的COVID-19病症已康復，並且未出現新症狀。</li><li>您已<a href="/zh-hant/vaccines/#Quarantine-if-you%E2%80%99re-vaccinated">完全接種</a>COVID-19疫苗並且未出現症狀。</li></ul>
-<p>即便您已完全接種，您也應該避免非必要的國內和國際旅遊。請參閱<a href="/zh-hant/travel/">旅遊頁面</a>，以了解有關旅遊的檢疫隔離規定。</p>
+<p>請參閱<a href="/zh-hant/travel/">出行頁面</a>，以了解有關出行的檢疫隔離規定。</p>
 
                   </div>
                 </div>
