--- a/es/symptoms-and-risks/index.html
+++ b/es/symptoms-and-risks/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Síntomas y riesgos</h1>
           
-            <p class="small-text">Última actualización&nbsp;1 de abril de 2021 a las 3:19 p. m.</p>
+            <p class="small-text">Última actualización&nbsp;2 de abril de 2021 a las 7:55 p. m.</p>
           
         </div>
       </div>
@@ -555,7 +555,7 @@
 <ul><li>Estuvo a menos de seis pies de alguien que tiene COVID-19 durante 15 minutos o más durante un periodo de 24 horas.</li><li>Proporcionó atención en el hogar a alguien que está enfermo de COVID-19.</li><li>Tuvo contacto físico directo con la persona (como abrazarla o besarla).</li><li>Compartieron utensilios para comer o beber.</li><li>La persona estornudó, tosió o de alguna manera le dejó caer gotitas respiratorias.</li></ul>
 <p>No tiene que ponerse en cuarentena, incluso después de un contacto estrecho, si:</p>
 <ul><li>Se recuperó de la COVID-19 en los últimos 3 meses y no tiene síntomas nuevos.</li><li>Se <a href="/es/vaccines/#Quarantine-if-you%E2%80%99re-vaccinated">vacunó completamente</a> contra la COVID-19 y no muestra síntomas.</li></ul>
-<p>Debe evitar los viajes nacionales e internacionales que no sean esenciales, incluso si está completamente vacunado. Consulte la <a href="/es/travel/">página Viajes</a> para conocer los requisitos de cuarentena relacionados con los viajes.</p>
+<p>Consulte la <a href="/es/travel/">página Viajes</a> para conocer los requisitos de cuarentena relacionados con los viajes.</p>
 
                   </div>
                 </div>
