--- a/zh-hans/vaccines/index.html
+++ b/zh-hans/vaccines/index.html
@@ -150,7 +150,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>疫苗</h1>
           
-            <p class="small-text">最后更新时间&nbsp;2021年4月1日, 下午1:57</p>
+            <p class="small-text">最后更新时间&nbsp;2021年4月5日, 上午9:37</p>
           
         </div>
       </div>
@@ -649,6 +649,10 @@
 
 
 
+<p class="small-text">请注意：剂量配送的地点包括CDC长期护理 (Long Term Care, LTC) 药房合作伙伴计划 (Pharmacy Partnership Program)、联邦零售药房合作伙伴计划 (Federal Retail Pharmacy Partnership Program)、联邦透析中心计划 (Federal Dialysis Center Program)、联邦紧急事务管理署 (Federal Emergency Management Agency, FEMA) 的合作伙伴处，以及卫生资源与服务管理局 (Health Resources and Services Administration, HRSA) 的合作伙伴处。此剂量不包含配送到以下联邦机构的剂量：印第安保健服务所 (Indian Health Service)、退伍军人健康管理局 (Veterans Health Administration)、国防部 (Department of Defense)，以及联邦监狱管理局 (联邦监狱管理局)。CDC LTC药房和联邦零售合作伙伴计划的剂量是配送剂量的一部分。</p>
+
+
+
 <h3>疫苗接种和社区健康状况（疫苗公平指标）</h3>
 
 
@@ -665,8 +669,11 @@
 
 
 
-<div class="col-lg-10 mx-auto"> <!-- Tableau embed for "Weekly percent of vaccinated people by HPI quartile"--> <div class="tableauPlaceholder" id="viz1617137811229" style="position: relative"><noscript><a href="#"><img alt="疫苗公平指标一览表 " src="https://public.tableau.com/static/images/CO/COVID-19VaccineEquityMetricQuartileDashboard/VaccineEquityMetricDashboard/1_rss.png" style="border: none"></a></noscript><object class="tableauViz" style="display:none;"><param name="host_url" value="https%3A%2F%2Fpublic.tableau.com%2F"> <param name="embed_code_version" value="3"> <param name="site_root" value=""><param name="name" value="COVID-19VaccineEquityMetricQuartileDashboard/VaccineEquityMetricDashboard"><param name="tabs" value="no"><param name="toolbar" value="yes"><param name="static_image" value="https://public.tableau.com/static/images/CO/COVID-19VaccineEquityMetricQuartileDashboard/VaccineEquityMetricDashboard/1.png"> <param name="animate_transition" value="yes"><param name="display_static_image" value="yes"><param name="display_spinner" value="yes"><param name="display_overlay" value="yes"><param name="display_count" value="yes"><param name="language" value="en"><param name="filter" value="publish=yes"></object></div>                <script type="text/javascript">                    var divElement = document.getElementById('viz1617137811229');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.minWidth='500px';vizElement.style.maxWidth='800px';vizElement.style.width='100%';vizElement.style.height='527px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.minWidth='500px';vizElement.style.maxWidth='800px';vizElement.style.width='100%';vizElement.style.height='527px';} else { vizElement.style.width='100%';vizElement.style.height='527px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script> <!-- end tableau embed --> <p class="small-text">请注意：疫苗公平指标仅供每周分配疫苗和进行报告时使用。不应该将CDPH推导出的四分位数视为这些邮政编码地区的HPI评分。由于担心部分地区（人口少于1,500的地区或超过50%的人口都居住在群居场所的地区）统计数据的可靠性和有效性，CDPH推导出的四分位数已被分配至南加州公共卫生联盟未给出HPI评分的邮政编码地区。</p>
-</div>
+<div class="col-lg-10 mx-auto"> <!-- Tableau embed for "Weekly percent of vaccinated people by HPI quartile"--> <div class="tableauPlaceholder" id="viz1617137811229" style="position: relative"><noscript><a href="#"><img alt="疫苗公平指标一览表 " src="https://public.tableau.com/static/images/CO/COVID-19VaccineEquityMetricQuartileDashboard/VaccineEquityMetricDashboard/1_rss.png" style="border: none"></a></noscript><object class="tableauViz" style="display:none;"><param name="host_url" value="https%3A%2F%2Fpublic.tableau.com%2F"> <param name="embed_code_version" value="3"> <param name="site_root" value=""><param name="name" value="COVID-19VaccineEquityMetricQuartileDashboard/VaccineEquityMetricDashboard"><param name="tabs" value="no"><param name="toolbar" value="yes"><param name="static_image" value="https://public.tableau.com/static/images/CO/COVID-19VaccineEquityMetricQuartileDashboard/VaccineEquityMetricDashboard/1.png"> <param name="animate_transition" value="yes"><param name="display_static_image" value="yes"><param name="display_spinner" value="yes"><param name="display_overlay" value="yes"><param name="display_count" value="yes"><param name="language" value="en"><param name="filter" value="publish=yes"></object></div>                <script type="text/javascript">                    var divElement = document.getElementById('viz1617137811229');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.minWidth='500px';vizElement.style.maxWidth='800px';vizElement.style.width='100%';vizElement.style.height='527px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.minWidth='500px';vizElement.style.maxWidth='800px';vizElement.style.width='100%';vizElement.style.height='527px';} else { vizElement.style.width='100%';vizElement.style.height='527px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script> <!-- end tableau embed -->  </div>
+
+
+
+<p class="small-text">请注意：疫苗公平指标仅供每周分配疫苗和进行报告时使用。不应该将CDPH推导出的四分位数视为这些邮政编码地区的HPI评分。由于担心部分地区（人口少于1,500的地区或超过50%的人口都居住在群居场所的地区）统计数据的可靠性和有效性，CDPH推导出的四分位数已被分配至南加州公共卫生联盟未给出HPI评分的邮政编码地区。</p>
 
 
 
