Update translation - 105412159 (#3973) 059312cd2edb513d57a35f1ce9b99debf4146e08

--- a/tl/index.html
+++ b/tl/index.html
@@ -162,7 +162,7 @@
 				</div>
 				<div class="hero-stats" role="region" aria-labelledby="tracking-covid">
 					<h2 class="color-orange text-center m-0 pb-2 pt-3" id="tracking-covid">Pagsubaybay sa COVID-19 sa CA</h2>
-					<div class="text-sm text-center text-300"></div>
+					<div class="text-sm text-center text-300">Na-update noong Abril 5, 2021 sa 10:00 AM nang may data mula Abril 4, 2021</div>
 
 
 
