--- a/ar/index.html
+++ b/ar/index.html
@@ -162,7 +162,7 @@
 				</div>
 				<div class="hero-stats" role="region" aria-labelledby="tracking-covid">
 					<h2 class="color-orange text-center m-0 pb-2 pt-3" id="tracking-covid">تعقب مصابي كوفيد-19 في كاليفورنيا</h2>
-					<div class="text-sm text-center text-300"></div>
+					<div class="text-sm text-center text-300">تم تحديث [تاريخ التحديث] ببيانات من [تاريخ البيانات]</div>
 
 
 
