--- a/ko/index.html
+++ b/ko/index.html
@@ -162,7 +162,7 @@
 				</div>
 				<div class="hero-stats" role="region" aria-labelledby="tracking-covid">
 					<h2 class="color-orange text-center m-0 pb-2 pt-3" id="tracking-covid">캘리포니아 내 COVID-19 추적 관리</h2>
-					<div class="text-sm text-center text-300"></div>
+					<div class="text-sm text-center text-300">2021년 4월 4일 일자 데이터로 2021년 4월 5일 오전 10:00 업데이트</div>
 
 
 
@@ -257,7 +257,7 @@
 						</div>
 					</div>
 					<div class="text-sm text-center text-300 ptop-12px">
-						본 데이터애 관한 세부 내용 확인은   <a class="hero-stats-footer-slink" href="/state-dashboard/">주 정부 대시보드에서 가능</a>.
+						본 데이터애 관한 세부 내용은 <a class="hero-stats-footer-slink" href="/state-dashboard/">주 정부 대시보드에서 확인</a>.
 					</div>
 						
 					<div class="hero-stats-footer">
