--- a/pages/wordpress-posts/new.html
+++ b/pages/wordpress-posts/new.html
@@ -7,4 +7,4 @@
 
 
 
-<a href="https://link" class="action-link pt-3 pb-3 px-4">Find out more</a>
+<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/beyond_memo.aspx" class="action-link pt-3 pb-3 px-4">Find out more</a>
