Update page - new.html

--- a/pages/wordpress-posts/new.html
+++ b/pages/wordpress-posts/new.html
@@ -3,7 +3,7 @@
 
 
 
-<p>The move forward comes as the state has reached 20 million vaccinations, including 4 million in its hardest-hit communities. Masking and vaccinations will continue. Hospitalization rates must stay low and vaccination progress high for the state to fully reopen.</p>
+<p>The move forward comes as the state has reached 20 million vaccinations, including 4 million in its hardest-hit communities. Masking and vaccinations will continue. Hospitalization rates must stay low and vaccination availability high for the state to fully reopen.</p>
 
 
 
