--- a/pages/wordpress-posts/new.html
+++ b/pages/wordpress-posts/new.html
@@ -1,10 +1,10 @@
 
-<h2 class="h3 text-primary m-0 pt-2 pb-3">Vaccinations opening for all Californians aged 50 and up April 1st, and 16 and up April 15th</h2>
+<h2 class="h3 text-primary m-0 pt-2 pb-3">California aims to fully reopen June 15</h2>
 
 
 
-<p>The state is expanding who is eligible to get the vaccine based on expected supply increases. It will still take months to get every Californian vaccinated who wants to be, but millions are being vaccinated each week.</p>
+<p>The move forward comes as the state has reached 20 million vaccinations, including 4 million in its hardest-hit communities. Masking and vaccinations will continue. Hospitalization rates must stay low and vaccination availability high for the state to fully reopen.</p>
 
 
 
-<a href="https://covid19.ca.gov/vaccines/" class="action-link pt-3 pb-3 px-4">Learn how to get vaccinated</a>
+<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/beyond_memo.aspx" class="action-link pt-3 pb-3 px-4">Find out more</a>
