Update translation - 105415279 (#3966) 7c783c6a3722a3a6b0710449804d4c52d996dd9e

--- a/zh-hans/index.html
+++ b/zh-hans/index.html
@@ -339,15 +339,15 @@
 		</section>
 	</hero-stats>
 
-    <section class="featured-content" role="region" aria-label="Featured updates">
+  <section class="featured-content" role="region" aria-label="Featured updates">
     <div class="news pt-6">
 			<div class="news-wrap">    
 				<div class="news-grid">
-					<article class="news-item"> 						<a href="/vaccines/" class="featured-content-image"> <img src="https://files.covid19.ca.gov/img/homepg/featured-vaccines.jpg" /> </a> 						<p class="mt-2 mb-0"><a class="bold text-larger" href="/vaccines/">接种疫苗</a></p>
+					<article class="news-item"> 						<a href="/vaccines/" class="featured-content-image"> <img src="https://files.covid19.ca.gov/img/homepg/featured-vaccines.jpg" alt="正在接种疫苗的加州民众"> </a> 						<p class="mt-2 mb-0"><a class="bold text-larger" href="/vaccines/">接种疫苗</a></p>
 					</article>
-					<article class="news-item"> 						<a href="/safer-economy/" class="featured-content-image"> <img src="https://files.covid19.ca.gov/img/homepg/featured-whatsopen.jpg" /> </a> 						<p class="mt-2 mb-0"><a class="bold text-larger" href="#">查看您所在县开放了哪些行业</a></p>
+					<article class="news-item"> 						<a href="/safer-economy/" class="featured-content-image"> <img src="https://files.covid19.ca.gov/img/homepg/featured-whatsopen.jpg" alt="我们正在开放处理注册业务的窗口"> </a> 						<p class="mt-2 mb-0"><a class="bold text-larger" href="/safer-economy/">查看您所在县开放了哪些行业</a></p>
 					</article>
-					<article class="news-item"> 						<a href="/safer-economy/#county-status" class="featured-content-image"> <img class="state-map" src="/img/cali-counties-colors.svg" /> </a> 						<p class="mt-2 mb-0"><a class="bold text-larger" href="/safer-economy/#county-status">查看您所在县的等级</a></p>
+					<article class="news-item"> 						<a href="/safer-economy/#county-status" class="featured-content-image"> <img class="state-map" src="/img/cali-counties-colors.svg" alt="用不同颜色呈现各等级的加州郡县地图"> </a> 						<p class="mt-2 mb-0"><a class="bold text-larger" href="/safer-economy/#county-status">查看您所在县的等级</a></p>
 					</article>
 				</div>
 			</div>
