ADD pages/guidancefeed/cdph/ac579b03924e888ae031f2100632d5e1.html 85db312016095f8ba2c7256ff164e02fbbfb0a26

--- a/ar/latest-news/index.html
+++ b/ar/latest-news/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>آخر الأخبار عن COVID-19</h1>
           
-            <p class="small-text">آخر التحديثات&nbsp;12:29 م الساعة 6 أبريل 2021</p>
+            <p class="small-text">آخر التحديثات&nbsp;2:42 م الساعة 6 أبريل 2021</p>
           
         </div>
       </div>
@@ -163,6 +163,14 @@
           </h2>
           <p class="card-text" lang="en-US"><small class="text-muted"><!--48056 -->April 6, 2021</small></p>
           <div class="card-text" lang="en-US">California has administered 20 million vaccines, including 4 million to the hardest-hit communities State aims to fully reopen on June 15, will continue to require masking and encourage all Californians to get vaccinated...</div>
+        </div>
+      </div> <div class="card border-0 border-bottom rounded-0" lang="en-US">
+        <div class="card-body pl-0" lang="en-US">
+          <h2 class="card-title lead" lang="en-US">
+            <a href="https://www.cdph.ca.gov/Programs/OPA/Pages/NR21-114.aspx" lang="en-US" hreflang="en-US" rel="external">Four Million COVID-19 Vaccine Doses Delivered to California's Hardest-Hit Communities, Prompting Update of State's Reopening Plan</a>
+          </h2>
+          <p class="card-text" lang="en-US"><small class="text-muted"><!--ac579b03924e888ae031f2100632d5e1 -->April 5, 2021</small></p>
+          <div class="card-text" lang="en-US">The California Department of Public Health (CDPH) today announced that a total of 4 million doses of COVID-19 vaccine have been administered to Californians in some of the state's hardest-hit communities, increasing immu...</div>
         </div>
       </div> <div class="card border-0 border-bottom rounded-0" lang="en-US">
         <div class="card-body pl-0" lang="en-US">
