Update README.md (#3995) 418988eb4fbf95979cd697f30f4d3a7b973e03f6

--- a/equity/index.html
+++ b/equity/index.html
@@ -324,6 +324,7 @@
       <div class="row pb-4">
           <div class="col-lg-10 mx-auto color-white">
             <h2 class="text-center color-orange" id="reopening-equitably">Reopening equitably</h2>
+            <p>California has taken many actions to address health equity. From targeted efforts in the Central Valley to ensuring vaccine accessibility for our hardest hit communities, California has worked to embed equity in our battle against COVID-19.</p> 
             <h3 class="color-white" id="what-weve-done">What we’ve done</h3>
             <p>California has taken action to begin addressing health equity. In the Central Valley we implemented a comprehensive approach to help those most affected. </p>This included:
 </p>
