Update translation - 105490507 (#4012) 4dfba645fab4bbc62252ebd4e189c3f42ea9b6ac

--- a/ar/help-for-seniors/index.html
+++ b/ar/help-for-seniors/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>مساعدة كبار السن</h1>
           
-            <p class="small-text">آخر التحديثات&nbsp;9:37 ص الساعة 1 أبريل 2021</p>
+            <p class="small-text">آخر التحديثات&nbsp;3:41 م الساعة 5 أبريل 2021</p>
           
         </div>
       </div>
@@ -189,7 +189,7 @@
 
 
 
-<p>ويستطيع كبار السن في كاليفورنيا أن يحصلوا على ثلاث وجبات مجانية بجودة أكل المطاعم من خلال برنامج <strong>Great Plates Delivered</strong>. يساعد برنامج توصيل الوجبات إلى المنازل كبار السن على البقاء بأمان في المنزل أثناء الجائحة. وهو مصرح به حاليًا حتى 7 أبريل 2021.</p>
+<p>ويستطيع كبار السن في كاليفورنيا أن يحصلوا على ثلاث وجبات مجانية بجودة أكل المطاعم من خلال برنامج <strong>Great Plates Delivered</strong>. يساعد برنامج توصيل الوجبات إلى المنازل كبار السن على البقاء بأمان في المنزل أثناء الجائحة. وهو مصرح به حاليًا حتى 7 مايو 2021.</p>
 
 
 
