--- a/ko/help-for-seniors/index.html
+++ b/ko/help-for-seniors/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>노령자를 위한 지원</h1>
           
-            <p class="small-text">최종 갱신 일자&nbsp;2021년 4월 1일 오전 9:37</p>
+            <p class="small-text">최종 갱신 일자&nbsp;2021년 4월 5일 오후 3:41</p>
           
         </div>
       </div>
@@ -189,7 +189,7 @@
 
 
 
-<p>캘리포니아의 고령자는 <strong>훌륭한 음식 배달</strong>을 통해 식당 수준의 세 끼 식사를 제공받을 수 있습니다. 이 가정 배달 프로그램을 통해 판데믹 기간 중에 고령자는 자택에서 안전하게 지낼 수 있습니다. 현재 이 프로그램 승인 기간은 2021년 4월 7일까지 입니다.</p>
+<p>캘리포니아의 고령자는 <strong>훌륭한 음식 배달</strong>을 통해 식당 수준의 세 끼 식사를 제공받을 수 있습니다. 이 가정 배달 프로그램을 통해 판데믹 기간 중에 고령자는 자택에서 안전하게 지낼 수 있습니다. 현재 이 프로그램 승인 기간은 2021년 5월 7일까지 입니다.</p>
 
 
 
