--- a/zh-hans/help-for-seniors/index.html
+++ b/zh-hans/help-for-seniors/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>为年长者提供的帮助</h1>
           
-            <p class="small-text">最后更新时间&nbsp;2021年4月1日, 上午9:37</p>
+            <p class="small-text">最后更新时间&nbsp;2021年4月5日, 下午3:41</p>
           
         </div>
       </div>
@@ -189,7 +189,7 @@
 
 
 
-<p>加州的年长者可以通过<strong>Great Plates Delivered</strong>获得三顿免费的餐厅品质餐食。在疫情期间，此送餐到家计划有助于年长者在家中保持安全。此计划目前的授权截止日期为2021年4月7日。</p>
+<p>加州的年长者可以通过<strong>Great Plates Delivered</strong>获得三顿免费的餐厅品质餐食。在疫情期间，此送餐到家计划有助于年长者在家中保持安全。此计划目前的授权截止日期为2021年5月7日。</p>
 
 
 
