--- a/zh-hant/help-for-seniors/index.html
+++ b/zh-hant/help-for-seniors/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>為年長者提供的幫助</h1>
           
-            <p class="small-text">最近更新&nbsp;2021年4月1日, 上午9:37</p>
+            <p class="small-text">最近更新&nbsp;2021年4月5日, 下午3:41</p>
           
         </div>
       </div>
@@ -189,7 +189,7 @@
 
 
 
-<p>加州的年長者可以透過<strong>Great Plates Delivered</strong>獲得三頓免費的餐廳品質餐食。在疫情期間，此送餐到家計劃有助於年長者在家中保持安全。此計劃目前的授權截止日期為2021年4月7日。</p>
+<p>加州的年長者可以透過<strong>Great Plates Delivered</strong>獲得三頓免費的餐廳品質餐食。在疫情期間，此送餐到家計劃有助於年長者在家中保持安全。此計劃目前的授權截止日期為2021年5月7日。</p>
 
 
 
