--- a/es/data-and-tools/index.html
+++ b/es/data-and-tools/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Datos y herramientas</h1>
           
-            <p class="small-text">Última actualización&nbsp;6 de abril de 2021 a las 6:16 p. m.</p>
+            <p class="small-text">Última actualización&nbsp;7 de abril de 2021 a las 1:21 a. m.</p>
           
         </div>
       </div>
