--- a/tl/help-for-seniors/index.html
+++ b/tl/help-for-seniors/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Tulong para sa mga nakakatanda</h1>
           
-            <p class="small-text">Huling na-update&nbsp;Abril 1, 2021 sa 9:37 AM</p>
+            <p class="small-text">Huling na-update&nbsp;Abril 5, 2021 sa 3:41 PM</p>
           
         </div>
       </div>
@@ -189,7 +189,7 @@
 
 
 
-<p>Makakakuha ang mga nakatatanda sa California ng tatlong libreng pang-restaurant na pagkain sa pamamagitan ng <strong>Great Plates Delivered</strong>. Nagbibigay-daan sa mga senior ang programang ito para sa delivery sa tahanan na manatiling ligtas sa bahay sa panahon ng pandemya. Sa kasalukuyan, awtorisado ito hanggang Abril 7, 2021.</p>
+<p>Makakakuha ang mga nakatatanda sa California ng tatlong libreng pang-restaurant na pagkain sa pamamagitan ng <strong>Great Plates Delivered</strong>. Nagbibigay-daan sa mga senior ang programang ito para sa delivery sa tahanan na manatiling ligtas sa bahay sa panahon ng pandemya. Sa kasalukuyan, awtorisado ito hanggang Mayo 7, 2021.</p>
 
 
 
