--- a/pages/translated-posts/new-es.html
+++ b/pages/translated-posts/new-es.html
@@ -1,5 +1,5 @@
-<h2 class="h3 text-primary m-0 pt-2 pb-3">Las vacunas contra la COVID-19 en California alcanzan los 15 millones</h2>
+<h2 class="h3 text-primary m-0 pt-2 pb-3">California tiene como objetivo reabrir completamente el 15 de junio</h2>
 
 
 
-<p>El número total de vacunas contra la COVID-19 administradas en California alcanzó los 15 millones. Consulte las estadísticas de vacunación en todo el estado y desglosadas por condado en nuestro panel de control de vacunas.</p>    <a href="https://covid19.ca.gov/vaccines/#California-vaccines-dashboard" class="action-link pt-3 pb-3 px-4">Consulte las cifras</a> 
+<p>El avance se produce cuando el estado ha alcanzado los 20 millones de vacunas, incluidos 4 millones en sus comunidades más afectadas. Se continuará con el uso de mascarilla y las vacunas. Las tasas de hospitalización deben permanecer bajas y la disponibilidad de vacunas alta para que el estado reabra por completo.</p>    <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/beyond_memo.aspx" class="action-link pt-3 pb-3 px-4">Obtenga más información.</a> 
