--- a/pages/translated-posts/new-ko.html
+++ b/pages/translated-posts/new-ko.html
@@ -1,5 +1,5 @@
-<h2 class="h3 text-primary m-0 pt-2 pb-3">캘리포니아 내 COVID-19 백신 접종자가 1천5백만명에 도달하였습니다</h2>
+<h2 class="h3 text-primary m-0 pt-2 pb-3">캘리포니아는 6월 15일자로 모든 운영을 재개하고자 합니다</h2>
 
 
 
-<p>캘피포니아에서 COVID-19 백신을 투여한 접종자가 총 1천5백만명에 도달하였습니다. 백신 관련 대시보드에서 주 전역 및 카운티 별로 분류한 통계 내용을 참조하십시오.</p>    <a href="https://covid19.ca.gov/vaccines/#California-vaccines-dashboard" class="action-link pt-3 pb-3 px-4">해당 숫자 확인</a> 
+<p>향후 취하게 될 이 조치는 캘리포니아가 가장 큰 피해를 입은 지역 사회 내 4백만 회분의 백신 접종을 포함하여 2천만 회분에 대한 백신 접종을 달성하면서 나오게 되었습니다. 마스크 착용과 백신 접종은 계속될 예정입니다. 주에서 모든 운영을 재개하려면 낮은 입원율과 높은 백신 접종 제공율을 유지해야 합니다.</p>    <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/beyond_memo.aspx" class="action-link pt-3 pb-3 px-4">더 자세한 사항을 확인하십시오</a> 
