--- a/pages/translated-posts/new-tl.html
+++ b/pages/translated-posts/new-tl.html
@@ -1,5 +1,5 @@
-<h2 class="h3 text-primary m-0 pt-2 pb-3">Mga pagpapabakuna laban sa COVID-19 sa California, umabot na sa 15 milyon</h2>
+<h2 class="h3 text-primary m-0 pt-2 pb-3">Layunin ng California na ganap nang muling magbukas sa Hunyo 15</h2>
 
 
 
-<p>Umabot na sa 15 milyon ang kabuuang bilang ng mga pagpapabakuna laban sa COVID-19 sa California. Tingnan ang mga istatistika sa pagbabakuna sa buong estado, na naka-break down ayon sa county sa aming Vaccine Dashboard.</p>    <a href="https://covid19.ca.gov/vaccines/#California-vaccines-dashboard" class="action-link pt-3 pb-3 px-4">Tingnan ang mga numero</a> 
+<p>Ang pag-usad ay dahil naabot na ng estado ang 20 milyong pagbabakuna, kasama ang 4 na milyon sa pinakaapektado nitong komunidad. Magpapatuloy ang pagsusuot ng mask at pagbabakuna. Dapat manatiling mababa ang mga rate ng pagpapaospital at dapat manatiling mataas ang availability ng pagbabakuna para ganap na muling makapagbukas ang estado.</p>    <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/beyond_memo.aspx" class="action-link pt-3 pb-3 px-4">Matuto pa</a> 
