--- a/pages/translated-posts/new-vi.html
+++ b/pages/translated-posts/new-vi.html
@@ -1,5 +1,5 @@
-<h2 class="h3 text-primary m-0 pt-2 pb-3">Số lượng vắc-xin COVID-19 được tiêm tại California đạt 15 triệu liều</h2>
+<h2 class="h3 text-primary m-0 pt-2 pb-3">California đặt mục tiêu mở cửa trở lại hoàn toàn vào ngày 15 tháng 6</h2>
 
 
 
-<p>Tổng số lượng vắc-xin COVID-19 được tiêm tại California đã đạt tới 15 triệu liều. Xem số liệu thống kê chủng ngừa trên toàn tiểu bang và số liệu được chia nhỏ theo quận trong Bảng Dữ Liệu về Vắc-xin của chúng tôi.</p>    <a href="https://covid19.ca.gov/vaccines/#California-vaccines-dashboard" class="action-link pt-3 pb-3 px-4">Xem số liệu</a> 
+<p>Động thái này được đưa ra khi tiểu bang đã đạt tới 20 triệu liều vắc-xin, trong đó có 4 triệu liều được tiêm tại các cộng đồng bị ảnh hưởng nặng nề nhất. Việc đeo khẩu trang và chủng ngừa vẫn sẽ tiếp tục. Tỷ lệ nhập viện phải duy trì ở mức thấp và khả năng chủng ngừa phải cao để tiểu bang có thể mở cửa trở lại hoàn toàn.</p>    <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/beyond_memo.aspx" class="action-link pt-3 pb-3 px-4">Tìm hiểu thêm</a> 
