--- a/pages/translated-posts/new-zh-hant.html
+++ b/pages/translated-posts/new-zh-hant.html
@@ -1,5 +1,5 @@
-<h2 class="h3 text-primary m-0 pt-2 pb-3">加州COVID-19疫苗接種人數已達1500萬人</h2>
+<h2 class="h3 text-primary m-0 pt-2 pb-3">加州計劃於6月15日完全重新開放</h2>
 
 
 
-<p>加州COVID-19疫苗接種總人數已達1500萬人。請參閱疫苗一覽表中全州的疫苗接種統計數據（按縣分類）。</p><a href="https://covid19.ca.gov/vaccines/#California-vaccines-dashboard" class="action-link pt-3 pb-3 px-4">請參閱相關數值</a> 
+<p>在這向前邁進之際，加州已接種2千萬劑疫苗，其中包括在疫情最嚴重的社區接種的4百萬劑疫苗。將繼續佩戴口罩和接種疫苗。如果加州要完全重新開放，其就必須保持較低的住院率和較高的疫苗接種率。</p><a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/beyond_memo.aspx" class="action-link pt-3 pb-3 px-4">了解更多資訊</a> 
