--- a/pages/translated-posts/new-ar.html
+++ b/pages/translated-posts/new-ar.html
@@ -1,5 +1,5 @@
-<h2 class="h3 text-primary m-0 pt-2 pb-3">وصلت لقاحات كوفيد-19 في كاليفورنيا إلى 15 مليونًا</h2>
+<h2 class="h3 text-primary m-0 pt-2 pb-3">تهدف كاليفورنيا إلى إعادة فتح جميع الأنشطة بالكامل بحلول 15 يونيو</h2>
 
 
 
-<p>وبلغ مجموع عدد لقاحات كوفيد-19 التي أعطيت في كاليفورنيا 15 مليون تلقيح. شاهد إحصائيات التطعيم على مستوى الولاية ومصنفة حسب المقاطعة في لوحة معلومات اللقاح الخاصة بنا.</p>    <a href="https://covid19.ca.gov/vaccines/#California-vaccines-dashboard" class="action-link pt-3 pb-3 px-4">شاهد الأرقام</a> 
+<p>ويأتي هذا التقدم إلى الأمام مع وصول الولاية إلى 20 مليون لقاح، منهم 4 مليون لقاح في أكثر المجتمعات تضررًا. وسيستمر ارتداء الأقنعة والتطعيم. ويجب أن تظل معدلات الإقامة في المستشفيات منخفضة وأن يكون توافر التطعيم مرتفعًا حتى يعاد فتح الولاية بالكامل. </p>    <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/beyond_memo.aspx" class="action-link pt-3 pb-3 px-4">اكتشف المزيد</a> 
