--- a/pages/translated-posts/new-zh-hans.html
+++ b/pages/translated-posts/new-zh-hans.html
@@ -1,5 +1,5 @@
-<h2 class="h3 text-primary m-0 pt-2 pb-3">加州COVID-19疫苗接种人数已达1500万人</h2>
+<h2 class="h3 text-primary m-0 pt-2 pb-3">加州计划于6月15日完全重新开放</h2>
 
 
 
-<p>加州COVID-19疫苗接种总人数已达1500万人。请参阅疫苗一览表中全州的疫苗接种统计数据（按县分类）。</p><a href="https://covid19.ca.gov/vaccines/#California-vaccines-dashboard" class="action-link pt-3 pb-3 px-4">请参阅相关数据</a> 
+<p>在这向前迈进之际，加州已接种2千万剂疫苗，其中包括在疫情最严重的社区接种的4百万剂疫苗。将继续佩戴口罩和接种疫苗。如果加州要完全重新开放，其就必须保持较低的住院率和较高的疫苗接种率。</p><a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/beyond_memo.aspx" class="action-link pt-3 pb-3 px-4">了解更多信息</a> 
