--- a/es/index.html
+++ b/es/index.html
@@ -306,11 +306,11 @@
 
 <title>loud-speaker</title><path d="M118,259.59c22.26,1.6,42.91,1.6,58.81,3.18-27-28.61-68.35-89-31.79-173.25L92.54,142C65.52,192.83,103.66,248.47,118,259.59Z" transform="translate(-19.23 -4.08)" style="fill:#1f2574"/><path d="M70.29,159.45A330.84,330.84,0,0,1,33.74,196C9,217,18,252.59,44.86,256.4c16.55,2.35,47.68,3.18,47.68,3.18C52.8,207.13,70.28,159.45,70.28,159.45Z" transform="translate(-19.23 -4.08)" style="fill:#1f2574"/><path d="M178.37,290.08c0-1.36.88-5.33-3.17-5.4-6.28-.1-59.95-1.29-67.2-1.57-2.56-.1-1.15,4.27.43,5.61,6.35,8.11,17.49,22.95,31.79,52.67,20.66,45.91,9.54,58.05,41.33,55.36C213.33,392.69,173.6,346.79,178.37,290.08Z" transform="translate(-19.23 -4.08)" style="fill:#1f2574"/><path d="M310.31,22.75c-39.74-36.55-73.12-9.54-82.66-1.59-20.67,15.89-27,20.66-44.51,38.15-25.43,31.79-62,109.68,17.49,203.46,46.1,4.77,90.61,9.54,124,9.54,12.71,0,41.33-7.94,47.68-49.27,11.12-66.77-11.13-152.59-62-200.27Zm19.07,228.9c-28.61,7.94-66.77-35-85.84-98.56S232.42,32.3,261,22.75c28.61-7.94,66.77,35,85.84,98.56C364.36,184.88,358,242.11,329.38,251.65Z" transform="translate(-19.23 -4.08)" style="fill:#1f2574"/><path d="M302.84,135.64c7.9,26,4.78,50-7,53.61s-27.7-14.64-35.61-40.68-4.77-50,7-53.61S294.93,109.6,302.84,135.64Z" transform="translate(-19.23 -4.08)" style="fill:#1f2574"/></svg>
 						<div class="hero-alert-text">
-							<h2 class="h3 text-primary m-0 pt-2 pb-3">Las vacunas contra la COVID-19 en California alcanzan los 15 millones</h2>
+							<h2 class="h3 text-primary m-0 pt-2 pb-3">California tiene como objetivo reabrir completamente el 15 de junio</h2>
 
 
 
-<p>El número total de vacunas contra la COVID-19 administradas en California alcanzó los 15 millones. Consulte las estadísticas de vacunación en todo el estado y desglosadas por condado en nuestro panel de control de vacunas.</p>    <a href="https://covid19.ca.gov/vaccines/#California-vaccines-dashboard" class="action-link pt-3 pb-3 px-4">Consulte las cifras</a> 
+<p>El avance se produce cuando el estado ha alcanzado los 20 millones de vacunas, incluidos 4 millones en sus comunidades más afectadas. Se continuará con el uso de mascarilla y las vacunas. Las tasas de hospitalización deben permanecer bajas y la disponibilidad de vacunas alta para que el estado reabra por completo.</p>    <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/beyond_memo.aspx" class="action-link pt-3 pb-3 px-4">Obtenga más información.</a> 
 						</div>
 					</div>
 
