--- a/data-and-tools/index.html
+++ b/data-and-tools/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Data and tools</h1>
           
-            <p class="small-text">Last updated&nbsp;April 7, 2021 at 11:32 AM</p>
+            <p class="small-text">Last updated&nbsp;April 7, 2021 at 1:26 PM</p>
           
         </div>
       </div>
