Refactoring. Added config for positivity-rate.

--- a/pages/wordpress-posts/v3-state-dashboard.html
+++ b/pages/wordpress-posts/v3-state-dashboard.html
@@ -402,7 +402,7 @@ cagov-chart-dashboard-confirmed-cases-episode-date.chart .chart-title, cagov-cha
       </cagov-chart-dashboard-total-tests-testing-date>               
     </div>
     <div class="col-lg-6 col-md-6 col-sm-12">
-      <cagov-chart-dashboard-positivity-rate class="chart">
+      <cagov-chart-dashboard-positivity-rate class="chart" data-chart-config-filter="positivity" data-chart-config-key="positivity">
         <ul class="d-none">
           <li data-label="chartTitle">Positivity rate in</li>
           <li data-label="chartLegend1"><span class="big-num">{test_positivity_7_days}</span> test positivity (7-day rate)</li>
