Update page - homepage-labels.json 8ff726d4d899a59c134fb37beabbfcde7e5b9c1a

--- a/ko/index.html
+++ b/ko/index.html
@@ -162,7 +162,7 @@
 				</div>
 				<div class="hero-stats" role="region" aria-labelledby="tracking-covid">
 					<h2 class="color-orange text-center m-0 pb-2 pt-3" id="tracking-covid">캘리포니아 내 COVID-19 추적 관리</h2>
-					<div class="text-sm text-center text-300">2021년 4월 6일 일자 데이터로 2021년 4월 7일 오전 10:00 업데이트</div>
+					<div class="text-sm text-center text-300"></div>
 
 
 
