--- a/zh-hant/index.html
+++ b/zh-hant/index.html
@@ -162,7 +162,7 @@
 				</div>
 				<div class="hero-stats" role="region" aria-labelledby="tracking-covid">
 					<h2 class="color-orange text-center m-0 pb-2 pt-3" id="tracking-covid">在加州追踪COVID-19</h2>
-					<div class="text-sm text-center text-300">使用來自2021年4月6日的數據更新2021年4月7日, 上午10:00</div>
+					<div class="text-sm text-center text-300"></div>
 
 
 
