--- a/es/index.html
+++ b/es/index.html
@@ -162,7 +162,7 @@
 				</div>
 				<div class="hero-stats" role="region" aria-labelledby="tracking-covid">
 					<h2 class="color-orange text-center m-0 pb-2 pt-3" id="tracking-covid">Rastreo de la COVID-19 en California</h2>
-					<div class="text-sm text-center text-300">Actualizado el 7 de abril de 2021 a las 10:00 a. m. con datos del 6 de abril de 2021</div>
+					<div class="text-sm text-center text-300"></div>
 
 
 
