--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 				</div>
 				<div class="hero-stats" role="region" aria-labelledby="tracking-covid">
 					<h2 class="color-orange text-center m-0 pb-2 pt-3" id="tracking-covid">Tracking COVID-19 in CA</h2>
-					<div class="text-sm text-center text-300">Updated April 7, 2021 at 10:00 AM with data from April 6, 2021</div>
+					<div class="text-sm text-center text-300"></div>
 
 
 
