--- a/vi/index.html
+++ b/vi/index.html
@@ -164,7 +164,7 @@
 				</div>
 				<div class="hero-stats" role="region" aria-labelledby="tracking-covid">
 					<h2 class="color-orange text-center m-0 pb-2 pt-3" id="tracking-covid">Truy vết COVID-19 tại CA</h2>
-					<div class="text-sm text-center text-300">Được cập nhật 7 tháng 4, 2021 lúc 10:00 với dữ liệu từ 6 tháng 4, 2021</div>
+					<div class="text-sm text-center text-300"></div>
 
 
 
