Update translation - 105681645 (#4032) af4428356f14a21bca6e7df741fb1ddb5903c4e7

--- a/zh-hans/index.html
+++ b/zh-hans/index.html
@@ -257,7 +257,7 @@
 						</div>
 					</div>
 					<div class="text-sm text-center text-300 ptop-12px">
-						此数据的详情在 <a class="hero-stats-footer-slink" href="/state-dashboard/">州一览表</a>.
+						作为正在持续更新的全州疫苗接种数据和完整性计划的一部分，在2021年4月7日进行定期晨间数据更新后，大约有400,000剂疫苗被增加到数据中。这些剂量数代表提供者已更正的部分记录数量，这些记录未在2021年3月11日至2021年4月6日之间被计入数据。此数据的详情在 <a class="hero-stats-footer-slink" href="/state-dashboard/">州一览表</a>.
 					</div>
 						
 					<div class="hero-stats-footer">
