--- a/tl/index.html
+++ b/tl/index.html
@@ -257,7 +257,7 @@
 						</div>
 					</div>
 					<div class="text-sm text-center text-300 ptop-12px">
-						Available ang mga detalye tungkol sa data na ito sa <a class="hero-stats-footer-slink" href="/state-dashboard/">dashboard ng estado</a>.
+						Bilang bahagi ng kasalukuyang pambuong-estadong inisyatiba sa datos sa pagbabakuna at integridad, humigit-kumulang 400,000 bakuna ang idinagdag sa datos matapos ang regular na pang-umagang pang-araw-araw na update noong Abril 7, 2021. Kinakatawan ng mga dosis na ito ang bilang ng mga talaang iwinasto ng mga provider pero hindi dating nabilang mula noong Marso 11, 2021 hanggang Abril 6, 2021. Available ang mga detalye tungkol sa data na ito sa <a class="hero-stats-footer-slink" href="/state-dashboard/">dashboard ng estado</a>.
 					</div>
 						
 					<div class="hero-stats-footer">
