Update page - state-dashboard.html 100e4db898bd94b2c20fb2d3ed937f009e0c19dc

--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
 						</div>
 					</div>
 					<div class="text-sm text-center text-300 ptop-12px">
-						As part of an ongoing statewide vaccination data and integrity initiative, approximately 400,000 vaccines were added to the data after the regular morning daily update on April 7, 2021. These doses represent a number of records that were corrected by providers but not previously counted between March 11, 2021, and April 6, 2021. Details about this data are available in the <a class="hero-stats-footer-slink" href="/state-dashboard/">state dashboard</a>.
+						Details about this data are available in the <a class="hero-stats-footer-slink" href="/state-dashboard/">state dashboard</a>.
 					</div>
 						
 					<div class="hero-stats-footer">
